--- a/tela02.html
+++ b/tela02.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>School Agenda</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
-    <link rel="stylesheet" 
-    href="style.css">
+    <title>Cadastro
+    </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style-t2.css">
 </head>
 <body>
     <div class="container">
         <div class='card'>
-        <h1>Entrar</h1>
+        <h1>Cadastrar</h1>
+
+        <div class="label-float">
+            <input type="text" id="Nome" placeholder="" required>
+            <label for="Nome">Nome</label>
+        </div>
 
         <div class="label-float">
             <input type="text" id="usuario" placeholder="" required>
@@ -23,21 +28,18 @@
             <label for="usuario">Senha</label>
             <i id="verSenha" class="fa fa-eye" aria-hidden="true"></i>
         </div>
-
-        <div class="justify-center">
-            <button>Entrar</button>
+        <div class="label-float">
+            <input type="password" id="confirmSenha" placeholder="" required>
+            <label for="confirmSenha">Confirma Senha</label>
+            <i id="verSenha" class="fa fa-eye" aria-hidden="true"></i>
         </div>
 
         <div class="justify-center">
-            <hr>
+            <button>Cadastrar</button>
         </div>
 
-        <p>Não tem uma conta?
-            <a href="#">Cadastre-se</a>
-        </p>
         </div>
     </div>
-
     <script>
         let btn = document.querySelector('.fa-eye')
 
