--- a/tela01.html
+++ b/tela01.html
@@ -39,7 +39,7 @@
     </div>
 
     <script>
-        let btn = document.querySelector('.fa-eye')
+        let btn = document.querySelector('#verSenha')
 
         btn.addEventListener('click', ()=>{
             let inputSenha = document.querySelector('#senha')
