--- a/cadastro.html
+++ b/cadastro.html
@@ -6,10 +6,12 @@
     <title>Cadastro
     </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style-t2.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="style-cadastro.css">
+
+
 </head>
 <body>
+    
     <div class="container">
         <div class='card'>
         <h1>Cadastrar</h1>
@@ -32,7 +34,7 @@
         <div class="label-float">
             <input type="password" id="confirmSenha" placeholder="" required>
             <label for="confirmSenha">Confirma Senha</label>
-            <i id="verConfirmeSenha" class="fa fa-eye" aria-hidden="true"></i>
+            <i id="verConfirmSenha" class="fa fa-eye" aria-hidden="true"></i>
         </div>
 
         <div class="justify-center">
@@ -41,5 +43,6 @@
 
         </div>
     </div>
+<script src="main.js"></script>
 </body>
 </html>
