--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>School Agenda</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" 
-    href="style.css">
+    href="style-login.css">
 </head>
 <body>
     <div class="container">
@@ -33,7 +33,7 @@
         </div>
 
         <p>Não tem uma conta?
-            <a href="#">Cadastre-se</a>
+            <a href="cadastro.html">Cadastre-se</a>
         </p>
         </div>
     </div>
