--- a/cadastro.html
+++ b/cadastro.html
@@ -22,8 +22,8 @@
         </div>
 
         <div class="label-float">
-            <input type="text" id="usuario" placeholder="" required>
-            <label for="usuario">Usuário</label>
+            <input type="email" id="usuario" placeholder="" required>
+            <label for="usuario">E-mail</label>
         </div>
 
         <div class="label-float">
